<resources>


    <string name="app_name">snacz</string>


    //activity_user_info
    <string name="create_acc_btn">Create an account</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign-up</string>
    <string name="login_page_sub">Don\'t miss any moment</string>


    //descriptions
    <string name="user_info_vector_description">popcorn image</string>


    //Bottom navigation view item names
    <string name="home_btn">Home</string>
    <string name="menu_btn">Menu</string>
    <string name="search_btn">Search</string>
    <string name="account_btn">Account</string>
    <string name="cart">Cart</string>



    //menu fragment
    <string name="filter_veg">Veg</string>
    <string name="filter_non_veg">Non-veg</string>
    <string name="menu_heading">Our Menu</string>
    <string name="Add_symbol">Add +</string>
    <string name="sub_menu_heading">Sharing combos</string>


    //card view

    <string name="card_img_desc">card img</string>


    //menu sidebar
    <string name="sidebar_img">sidebar image</string>


    //home top bar
    <string name="Dine_in">Dine in</string>
    <string name="Takeaway">Takeaway</string>

    //menu cards textview
    <string name="Festive_sharing">Festive sharing</string>
    <string name="Burger_wraps">Burger &amp; wraps</string>
    <string name="Meals">Meals</string>
    <string name="Saving_meals">Saving Meals</string>
    <string name="Fries_sides">Fries &amp; Sides</string>
    <string name="Deserts">Deserts</string>


    //buttons
    <string name="back"> &lt; Back</string>


    //login
    <string name="resend_code_in">Resend code in : %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

