<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:backgroundTint="@color/grey"
    tools:context=".activity_user_info">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="126dp"
        android:layout_height="42dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/bona_nova_regular"
        android:lineSpacingExtra="14sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textDirection="anyRtl"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_info_image_view"
        android:layout_width="201dp"
        android:layout_height="199dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/user_info_vector_description"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:srcCompat="@drawable/login_screen_vector" />

    <Button
        android:id="@+id/createAccountBtn"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/login_signup_btn_bg"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/bona_nova_regular"
        android:foregroundTint="@color/white"
        android:gravity="center"
        android:text="@string/create_acc_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/Login_jump_btn"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:background="@drawable/border_login_btn"
        android:clickable="true"
        android:fontFamily="@font/bona_nova_regular"
        android:foregroundTint="@color/white"
        android:gravity="center"
        android:text="@string/login_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/createAccountBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/createAccountBtn"
        app:layout_constraintTop_toBottomOf="@+id/createAccountBtn"
        app:layout_constraintVertical_bias="0.164" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="276dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bona_nova_italic"
        android:gravity="center"
        android:text="@string/login_page_sub"
        android:textColor="#605E5E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/user_info_image_view"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/user_info_image_view"
        app:layout_constraintTop_toBottomOf="@+id/user_info_image_view" />

</androidx.constraintlayout.widget.ConstraintLayout>