<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/delivery_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@drawable/add_btn_bg"
                        android:backgroundTint="@color/red"
                        android:contentDescription="@string/Delivery"
                        android:padding="10dp"
                        android:src="@drawable/delivery" />

                    <TextView
                        android:id="@+id/delivery_btn_txt"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Delivery" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/takeaway_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:tint="@color/black"
                        android:background="@drawable/add_btn_bg"
                        android:contentDescription="@string/Takeaway"
                        android:padding="10dp"
                        android:src="@drawable/delivery" />

                    <TextView
                        android:id="@+id/takeaway_btn_txt"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Takeaway" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/card_img_desc"
                android:padding="0dp"
                android:src="@drawable/banner"/>

            <TextView
                android:id="@+id/home_menu_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/menu_heading"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:cardBackgroundColor="@color/menu_card_color"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/menuImg1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:foregroundGravity="center"
                        android:src="@drawable/festive_sharing"
                        android:contentDescription="@string/card_img_desc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/Festive_sharing"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/menuImg1"
                        app:layout_constraintStart_toStartOf="@+id/menuImg1"
                        app:layout_constraintTop_toBottomOf="@+id/menuImg1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/menuCard2"
                    android:layout_width="0dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="7dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/menu_card_color"
                    app:cardElevation="5dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:background="@color/background"
                    app:cardCornerRadius="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/menuImg2"
                            android:layout_width="105dp"
                            android:layout_height="118dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/card_img_desc"
                            android:src="@drawable/burger_wraps"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.511"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/menuTxt2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/Burger_wraps"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/menuImg2"
                            app:layout_constraintHorizontal_bias="0.428"
                            app:layout_constraintStart_toStartOf="@+id/menuImg2"
                            app:layout_constraintTop_toBottomOf="@+id/menuImg2"
                            app:layout_constraintVertical_bias="0.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/menuCard3"
                    android:layout_width="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    app:cardElevation="5dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/menu_card_color"
                    android:background="@color/background"
                    app:cardCornerRadius="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/menuImg3"
                            android:layout_width="105dp"
                            android:layout_height="118dp"
                            android:contentDescription="@string/card_img_desc"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/meals"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.511"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/menuTxt3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/Meals"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/menuImg3"
                            app:layout_constraintHorizontal_bias="0.428"
                            app:layout_constraintStart_toStartOf="@+id/menuImg3"
                            app:layout_constraintTop_toBottomOf="@+id/menuImg3"
                            app:layout_constraintVertical_bias="0.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/menuCard4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/menu_card_color"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="7dp"
                    app:cardElevation="5dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:background="@color/background"
                    app:cardCornerRadius="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/menuImg4"
                            android:layout_width="90dp"
                            android:layout_height="88dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/card_img_desc"
                            android:src="@drawable/deserts"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.511"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/menuTxt4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/Deserts"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/menuImg4"
                            app:layout_constraintHorizontal_bias="0.625"
                            app:layout_constraintStart_toStartOf="@+id/menuImg4"
                            app:layout_constraintTop_toBottomOf="@+id/menuImg4"
                            app:layout_constraintVertical_bias="0.0" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/menuCard5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/menu_card_color"
                    android:layout_marginEnd="7dp"
                    app:cardElevation="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@color/background"
                    app:cardCornerRadius="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/menuImg5"
                            android:layout_width="90dp"
                            android:layout_height="88dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/card_img_desc"
                            android:src="@drawable/fries_sides"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.511"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/menuTxt5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/Fries_sides"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/menuImg5"
                            app:layout_constraintHorizontal_bias="0.428"
                            app:layout_constraintStart_toStartOf="@+id/menuImg5"
                            app:layout_constraintTop_toBottomOf="@+id/menuImg5"
                            app:layout_constraintVertical_bias="0.0"  />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/menuCard6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/menu_card_color"
                    android:layout_marginEnd="15dp"
                    app:cardElevation="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@color/background"
                    app:cardCornerRadius="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/menuImg6"
                            android:layout_width="90dp"
                            android:layout_height="88dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/card_img_desc"
                            android:src="@drawable/saving_combos"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.511"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/menuTxt6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/Saving_meals"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/menuImg6"
                            app:layout_constraintHorizontal_bias="0.428"
                            app:layout_constraintStart_toStartOf="@+id/menuImg6"
                            app:layout_constraintTop_toBottomOf="@+id/menuImg6"
                            app:layout_constraintVertical_bias="0.0"  />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>